Intégration d'une image dans le HTML, dans mon premier bloc

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <section class=".proj-prev proj-prev--mint">
         <div class="proj-prev__image">
-            <img src="" alt="Project title goes here">
+            <img src="assets/images/fortnite-g4282a45e9_640.jpg" alt="Project title goes here">
         </div>
         <h1 class="proj-prev__heading">
             Project Title
