--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
     <title>Portfolio</title>
 </head>
 <body>
+    <header>
+        <nav class="nav">
+            <ul>
+                <li class="nav__link nav__link--active">work</li>
+                <li class="nav__link"><a href="#">about</a></li>
+                <li class="nav__link"><a href="#">contact</a></li>
+            </ul>
+        </nav>
+    </header>
     <section class=".proj-prev proj-prev--mint">
         <div class="proj-prev__image">
             <img src="assets/images/fortnite-g4282a45e9_640.jpg" alt="Project title goes here">
